fix some styling alignment issues

--- a/src/components/Summary.css
+++ b/src/components/Summary.css
@@ -1,6 +1,7 @@
 .summary {
     display: flex;
     flex-wrap: wrap;
+    padding: 0 1rem;
 }
 
 
